Full working version, that works only with text and photos

--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,9 @@ env/
 venv/
 ENV/
 
-### Configuration file ###
-resources/application.yml
+### resources folder ###
+/src/main/resources/
+
+### logs folder ###
+logs
+
