Full working bot with video and photo parcing

--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,6 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
